--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "recharts": "^3.4.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
@@ -16,7 +17,7 @@
     "react-dom": "18.3.1",
     "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "leaflet": "^1.9.4",
+    "leaflet": "1.9.4",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
