--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "18.3.1",
     "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "leaflet": "1.9.4",
-    "react-leaflet": "^4.2.1"
+    "mapbox-gl": "2.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
