--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@livekit/components-react": "^3.0.0",
-    "@types/react-beautiful-dnd": "^13.1.8",
+    "recharts": "^3.4.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
-    "livekit-client": "^2.16.0",
-    "livekit-server-sdk": "^2.14.0",
-    "lucide-react": "^0.554.0",
-    "mapbox-gl": "2.15.0",
     "react": "18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
+    "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "recharts": "^3.4.1"
+    "mapbox-gl": "2.15.0",
+    "livekit-client": "2.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
