--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "18.3.1",
     "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "mapbox-gl": "2.15.0",
-    "livekit-client": "2.0.4"
+    "mapbox-gl": "2.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
