--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.3.1",
     "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "mapbox-gl": "2.15.0"
+    "mapbox-gl": "2.15.0",
+    "livekit-client": "2.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
