--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.4.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "lucide-react": "^0.554.0",
+    "mapbox-gl": "2.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "mapbox-gl": "2.15.0",
-    "livekit-client": "2.0.4"
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.4.1"
   }
 }
