--- a/package.json
+++ b/package.json
@@ -5,26 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "recharts": "^3.4.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
-    "lucide-react": "^0.554.0",
-    "mapbox-gl": "2.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "lucide-react": "^0.554.0",
     "react-router-dom": "6.22.3",
-    "recharts": "^3.4.1"
+    "mapbox-gl": "2.14.1",
+    "livekit-client": "2.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.4.1"
+    "vite": "^6.2.0"
   }
 }
